# mcp-ppt-controller

./: AgenticMCPUse.py  README.md  example2.py  main.py  mcp_server-1.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  talk2mcp-2.py  test_paint_app.py
