[project]
name = "mcp-ppt-controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-auth-oauthlib>=1.2.1",
    "google-genai>=1.10.0",
    "google-generativeai>=0.8.4",
    "mcp[cli]>=1.6.0",
    "pillow>=11.1.0",
    "pywin32>=310",
    "pywinauto>=0.6.9",
]
